cluster/apps/piped/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    netbird.io/expose: "true"
    netbird.io/resource-name: backend
    netbird.io/groups: k3s-apps,piped
  labels:
    app: backend-service
  name: backend-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: HTTP
