cluster/apps/piped/ytproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ytproxy-service
  name: ytproxy-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: piped-ytproxy
