cluster/apps/piped/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piped-backend-ingress
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: piped-backend
            port:
              number: 8080
  tls:
  - hosts:
    - pipedbackend
