cluster/apps/piped/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piped-frontend-ingress
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: piped-frontend
            port:
              number: 80
  tls:
  - hosts:
    - piped
