cluster/apps/piped/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piped-proxy-ingress
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: piped-ytproxy
            port:
              number: 8080
  tls:
  - hosts:
    - pipedproxy
